--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,20 @@ authors = ["yhql", "agrojean-ledger"]
 edition = "2021"
 
 [dependencies]
-ledger_device_sdk = "1.19.4"
+ledger_device_sdk = "1.20.1"
+ledger_secure_sdk_sys = "1.6.5"
 include_gif = "1.2.0"
 serde = {version="1.0.192", default_features = false, features = ["derive"]}
 serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core"}
 hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
-numtoa = "0.2.4"
 
 [profile.release]
 opt-level = 'z'
 lto = true
 
 [features]
-default = ["pending_review_screen"]
+default = ["debug"]
+debug = ["ledger_device_sdk/debug"]
 pending_review_screen = []
 
 [package.metadata.ledger]
